            - The str() function and output stream operator now support
              128-bit integers on all platforms where native 128-bit integers
              are available.
            - The output stream operator now ensures numerical output even when
              bytes == 1 (i.e., when the native C++ integer is a signed char).
            - Almost everything in this class is now constexpr.
        Class NormalSurface:
            - Routines components(), countBoundaries(), disjoint(),
              isCompressingDisc(), isConnected(), isIncompressible(),
              isOrientable() and isTwoSided() now throw an exception if the
              underlying algorithms encounter an impossible memory requirement
              (typically due to some normal coordinate being too large to fit
              into a size_t).
            - Routine countBoundaries() now throws an exception if the normal
              arc count for some arc type on the boundary is so large that it
              cannot fit into a size_t.
        Class NormalSurfaces:
            - Routines saveCSVEdgeWeight() and saveCSVStandard() now throw an
              exception if the underlying algorithms encounter an impossible
              memory requirement (typically due to some normal coordinate
              being too large to fit into a size_t).
            - The "transformation constructor" could throw an exception when
              using the FilterDisjoint transformation in the presence of
              enormous normal coordinates (again because an impossible memory
              requirement was encountered).
        Struct NoSuchType:
            - A new declared-but-not-defined type that can be used as a
              placeholder to avoid compile errors.
        Class NumericalError:
            - New exception class.
        Class PermClass<n>:
            - Everything in this class is now constexpr.
        Class Polynomial<T>: