@@ -148,6 +148,8 @@ Version 7.5  [ TODO ]
               are available.
             - The output stream operator now ensures numerical output even when
               bytes == 1 (i.e., when the native C++ integer is a signed char).
+            - The division operators / and /= now throw an exception when
+              dividing by zero.
             - Almost everything in this class is now constexpr.
         Class NormalSurface:
             - Routines components(), countBoundaries(), disjoint(),
